syntax = "proto3";

package pepeunlimited.twirpkit.resources;

option go_package = "github.com/pepeunlimited/go-twirp-starter-kit/pkg/api/v1/resources";

message Todo {
  int64 id = 1;
  string title = 2;
  string created_at = 3;
  string updated_at = 4;
  bool is_done = 5;
}